apps/docmost/base/networkpolicy/cilium-networkpolicy.yaml
---
# CiliumNetworkPolicy for Docmost wiki
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: docmost
  namespace: docmost
spec:
  endpointSelector: {}
  ingress:
    # Allow web traffic from Traefik
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    # Allow CI sync job from gitlab-runner namespace
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gitlab-runner
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    # Allow intra-namespace (docmost <-> redis <-> postgres)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: docmost
    # Allow Prometheus metrics
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9121"
              protocol: TCP
            - port: "9187"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    # Intra-namespace
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: docmost
    # Authentik SSO
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
